[gd_scene load_steps=4 format=3 uid="uid://uamm8vyb7t0q"]

[ext_resource type="PackedScene" uid="uid://c3q3cv3jeiqm2" path="res://component/controllers/Controller.tscn" id="1_rwhqd"]
[ext_resource type="Script" path="res://component/controllers/ai/AIController.gd" id="2_esu1u"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gn0ft"]
radius = 5.0

[node name="Controller" instance=ExtResource("1_rwhqd")]
script = ExtResource("2_esu1u")
accel_margin = 1.5708
shoot_margin = 1.5708
max_target_distance = 1000
destination_margin = 100

[node name="Label" type="Label3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.38364, 0)
billboard = 1

[node name="Rethink" type="Timer" parent="." index="1"]
autostart = true

[node name="EngagementRange" type="Area3D" parent="." index="2"]
collision_layer = 0
collision_mask = 9

[node name="CollisionShape3D" type="CollisionShape3D" parent="EngagementRange" index="0"]
shape = SubResource("CylinderShape3D_gn0ft")

[connection signal="timeout" from="Rethink" to="." method="_on_Rethink_timeout"]
[connection signal="body_entered" from="EngagementRange" to="." method="_on_EngagementRange_body_entered"]
[connection signal="body_exited" from="EngagementRange" to="." method="_on_EngagementRange_body_exited"]
